<resources>
    <string name="app_name">Ask Snoo Anything</string>
    <string name="action_settings">Settings</string>
    <string name="hello_reddit">Hello, Reddit...</string>
    <string name="what">Confused?</string>
    <string name="info_text">Want to hear what some random Redditor thinks about something? Just ask Snoo about your topic! <i>Ask Snoo Anything</i> returns Reddit comments related to what you say.</string>
    <string name="more">Interested in trying out a feature we\'re working on? It optimizes by number of upvotes- but it is going to make things a bit slower.</string>
    <string name="fast">No Optimization - Fastest</string>
    <string name="medium">Some Optimization - Average</string>
    <string name="slow">Most Optimization - Slowest </string>
    <string name="shake">Try shakin\' for a random response. And hold the comment down to open up the Reddit thread it came from.</string>
    <string name="shake_string">**Shake Shake**</string>
    <string name="general">The question is too general for me to answer, please be specific</string>
    <string name="no_comments">Reddit doesn\'t know how to respond to that.</string>
    <string name="error_1">make sense pls</string>
    <string name="error_not_recognized">Sorry, you said nothing.</string>
    <string name="error_say_something">...You have a mouth, right? Say something, or type it above.</string>
    <string name="error_our_side">error on our side, sorry :\'-(</string>
    <string name="no_wifi_1">You know, life without Wi-Fi is hard.</string>
    <string name="no_wifi_2">maybe you should move to canada, we have really good internet here :o)</string>
    <string name="no_wifi_3">Pay me $50 and I will get you Wi-Fi</string>
    <string name="no_wifi_4">I agree that free Wi-Fi shouldn\'t be forbidden</string>
    <string name="no_wifi_5">Keep looking on the internet. Surely there must be a good forecast somewhere out there</string>
    <string name="no_wifi_6">I won\'t work until you provide me with life-long free Wi-Fi</string>
    <string name="hi_reddit_1">hi reddit</string>
    <string name="hi_reddit_2">hello reddit</string>
    <string name="hi_reddit_3">hey reddit</string>
    <string name="hi_reddit_4">hi snoo</string>
    <string name="hi_reddit_5">hello snoo</string>
    <string name="hi_reddit_6">hey snoo</string>
    <string name="hi_reddit_response">Hey friend, I\'m Snoo!! Ask me anything ;-)</string>
</resources>
