<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        tools:context="com.mobileproto.hireddit.hireddit.visuals.InfoFragment">

        <ImageView
            android:id="@+id/snooHead"
            android:layout_width="74dp"
            android:layout_height="62dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/snoo_head" />

        <TextView
            android:id="@+id/whatTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/snooHead"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:paddingTop="15dp"
            android:text="@string/what"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorOrange" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/whatTitle"
            android:layout_gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/info_text"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoText"
            android:layout_gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/shake"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shake"
            android:layout_gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/more"
            android:textColor="@color/colorWhite" />

        <RadioGroup
            android:id="@+id/selectOptimization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast"
                android:textColor="@color/colorWhite" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/colorWhite" />

            <RadioButton
                android:id="@+id/slow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slow"
                android:textColor="@color/colorWhite" />
        </RadioGroup>

    </RelativeLayout>

</ScrollView>